*1.7
[!] Fixed issue of a memory allocation on the model 1000.

*1.6 (2011.09.11)
[+] Added libmHookDisplayHandler and libmInitBuffers_ForHook.
[-] Removed an unused font in font_cg.
[!] Optimized a memory allocation.

*1.5 (2011.08.25)
[+] Added font.

*1.4 (2011.08.21)
[!] Fix the method to allocate memory for font

*1.3 (2011.08.16)
[+] Added font.
[!] Changed, load font into user memory.

*1.2 (2011.08.05)
[+] Added libmGetActiveNum.
[+] Added font.
[!] Changed no_font.

*1.1 (2011.08.02)
[+] Added font.
[!] Fixed libmLoadFont.

*1.0 (2011.07.13)
[] First release!