@@ -67,6 +67,7 @@ PSP_EXPORT_FUNC_HASH(libmCloseAllContainer)
 PSP_EXPORT_FUNC_HASH(libmGetActiveNum)
 PSP_EXPORT_FUNC_HASH(libmHookDisplayHandler)
 PSP_EXPORT_FUNC_HASH(libmInitBuffers_ForHook)
+PSP_EXPORT_FUNC_HASH(libmGetFontAddr)
 
 PSP_EXPORT_END
 
